Watcha op330 dialog for user creation (#12)
* feat: add one i18n namespace per tab

* feat: add Watcha favicon

* feat: add NewItemButton component

* cmd: yarn add formik yup

* feat: wrap createUserRightPanel into NewItemModal component

* feat: add NewUserForm component

* feat: link new user form and watcha_register end point

* feat: add synapse administrator checkbox

* fix: remove retry requests on error

* fix: remove cancel requests onHide modal

* feat: add local echo for new user creation

* feat: reset feedback on alert click

* fix: remove diacritic in userId

* fix: add a margin before the spinner

* fix: convert userId to lower case

* Update build/run instruction in README.md

* fix: remove forbidden characters from userId

* fix: escape dash in regex class

* fix: remove useless credentials

* fix: typo

* refactor:
- remove useless optimization boilerplate
- use ref in useEffet for variables that are not denpencies
- add NexUserModal component
- disable submission while feedback
- reset form after validating feeback
- update i18n "accountStatus" key

* fix: restore creation date time in UserRightPanel

* refactor: add newUserLocalEcho()

Co-authored-by: Francois Granade <github.com@farialima.net>

--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -8,26 +8,8 @@
     "One to one": "Conversation à deux",
     "Room": "Salon ",
     "Statistics for Watcha server": "Statistiques",
-    "Hide internal users": "Masquer les utilisateurs internes",
     "Hide one-to-one conversations": "Masquer les conversations à deux",
-    "Hide partners": "Masquer les utilisateurs externes",
-    "Hide inactive": "Masquer les salons inactifs",
     "Search": "Rechercher",
-    "Last Name": "Nom",
-    "First Name": "Prénom",
-    "This email address seems to be invalid. Please enter a valid email address.": "Cette adresse email semble invalide. Veuillez entrer une adresse email valide",
-    "Invalid Email": "Adresse email invalide",
-    "Invalid Last Name": "Nom invalide",
-    "First Name must contain at least two characters ": "Le Prénom doit contenir au moins deux caractères",
-    "Last Name must contain at least two characters ": "Le Nom doit contenir au moins deux caractères",
-    "Email already in use": "Email utilisé",
-    "Invalid First Name": "Prénom invalide",
-    " is already in use for a different account.": " est déjà associé à un compte.",
-    "User id required": "Nom d'utilisateur requis",
-    "Enter a valid user id": " Entrez un nom d'utilisateur valide ",
-    "User Creation Failed": " Échec lors de la création de l'utilisateur ",
-    "User Created": "Utilisateur créé",
-    " has been added to watcha": " a été ajouté à Watcha",
     "Upgrade to internal user": "Promouvoir en utilisateur interne",
     "Reset Password": " Réinitialiser le mot de passe",
     "Deactivate Account": "Désactiver le compte",
@@ -72,38 +54,9 @@
         "button": "Connexion",
         "loading": "Chargement..."
     },
-    "dashboardTab": {
-        "title": "Tableau de bord"
-    },
-    "usersTab": {
-        "title": "Utilisateurs",
-        "searchBox": {
-            "filter": "Filtrer",
-            "clear": "Effacer",
-            "placeholder": "Filtrer les utilisateurs"
-        },
-        "button": "Nouvel utilisateur",
-        "headers": {
-            "displayName": "Nom d'affichage",
-            "emailAddress": "Adresse électronique",
-            "lastSeen": "Dernière activité le",
-            "role": "Rôle",
-            "accountStatus": "Statut du compte"
-        },
-        "roles": {
-            "administrator": "Administrateur",
-            "collaborator": "Collaborateur",
-            "partner": "Partenaire"
-        },
-        "isActive": {
-            "1": "activé",
-            "0": "désactivé"
-        }
-    },
-    "roomsTab": {
-        "title": "Salons"
-    },
-    "monitoringTab": {
-        "title": "Monitorage"
-    }
+    "save": "Enregistrer",
+    "cancel": "Annuler",
+    "close": "Fermer",
+    "success": "Opération terminée avec succès",
+    "danger": "Une erreur s'est produite"
 }
