Watcha op284 use react table (#9)
* cmd: yarn add react-table

* refactor: replace object[xxx] with object.xxx

* refactor: replace legacy functional components with arrow functions

* cmd: yarn add restful-react

* refactor: convert StatsTab into functional component

* refactor: convert CardStats into functional component

* feat: use restful-react for StatsTab component

* feat: replace custom loading animation with a spinner

* feat: replace App.css content with user.css one and improve centered layout

* refactor: convert App into functional component

* feat: add DelayedSpinner component

* refactor: convert AdminHome into functional component

* feat: improve variable names involved in changing tabs

* fix: typo

* feat: update i18n for tab titles

* feat: update i18n for Login component

* feat: improve pattern to avoid double submission

* fix: pass the right prop to CardStat component for tab change

* refactor: rename StatsTab component

* refactor: convert Login into functional component

* feat: add useMatrixClientContext()

* feat: add TabReducerContext

* feat: hide user list for empty rooms

* fix: replace setState callback() with callback for deactivateSynapseUser()

* feat: add ChangeTabContext

* feat: add UsersTab & RoomsTab components

* feat: add DispatchContext, UserIdContext and RoomIdContext

* feat: use react-table for users tab

* fix: improve layout

* feat: add new user button

* refactor: improve i18n hierarchy

* feat: add the old CreateUserRightPanel to the new UsersTab

* feat: add the old UserRightPanel to the new UsersTab

* fix: limit the scope of css classes for user account status

* fix: improve spinner layout

* fix: restore missing i18n

* fix: remove table outline

* Watcha op313 modify user page on admin dashboard (#11)

* feat: add email next to displayname on for each admin line.

* style: deletion of underline on each admin line.

* feat: del

--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -1,55 +1,21 @@
 {
-    "Sign in": "Connexion",
     "Members": "Utilisateurs internes ",
     "Member": "Utilisateur interne",
     "Internal users": "Utilisateurs internes",
     "Partners": "Partenaires ",
-    "Partner": "Partenaire ",
     "Administrators": "Administrateurs ",
-    "Admin": "Administrateur ",
-    "Active rooms": "Salons actifs ",
     "One-to-one conversations": "Conversations à deux ",
     "One to one": "Conversation à deux",
-    "Inactive Rooms": "Salons inactifs ",
-    "Inactive": "Inactifs",
-    "Rooms": "Salons",
     "Room": "Salon ",
-    "Loading": "Chargement",
-    "Users": "Utilisateurs",
-    "Status": "Rôle",
-    "User": "Utilisateur ",
-    "Overview": "Etat du serveur",
     "Statistics for Watcha server": "Statistiques",
-    "Hide internal users": "Masquer les utilisateurs internes",
     "Hide one-to-one conversations": "Masquer les conversations à deux",
-    "Hide partners": "Masquer les utilisateurs externes",
-    "Hide inactive": "Masquer les salons inactifs",
     "Search": "Rechercher",
-    "Create user": "Nouvel utilisateur",
-    "User Id": "Nom d'utilisateur",
-    "Last Name": "Nom",
-    "First Name": "Prénom",
-    "This email address seems to be invalid. Please enter a valid email address.": "Cette adresse email semble invalide. Veuillez entrer une adresse email valide",
-    "Invalid Email": "Adresse email invalide",
-    "Email": "Email ",
-    "Invalid Last Name": "Nom invalide",
-    "First Name must contain at least two characters ": "Le Prénom doit contenir au moins deux caractères",
-    "Last Name must contain at least two characters ": "Le Nom doit contenir au moins deux caractères",
-    "Email already in use": "Email utilisé",
-    "Invalid First Name": "Prénom invalide",
-    " is already in use for a different account.": " est déjà associé à un compte.",
-    "User id required": "Nom d'utilisateur requis",
-    "Enter a valid user id": " Entrez un nom d'utilisateur valide ",
-    "User Creation Failed": " Échec lors de la création de l'utilisateur ",
-    "User Created": "Utilisateur créé",
-    " has been added to watcha": " a été ajouté à Watcha",
     "Upgrade to internal user": "Promouvoir en utilisateur interne",
     "Reset Password": " Réinitialiser le mot de passe",
     "Deactivate Account": "Désactiver le compte",
     "Show connection history": "voir l'historique de connexion",
     "Device": "Appareil",
     "Devices": "Appareils",
-    "Last seen": "Dernière activité le",
     "Connected": "Connecté",
     "Creation": "Création ",
     "Account deactivated": "Compte désactivé",
@@ -63,8 +29,6 @@
     "The account ": "Le compte ",
     " has been reactivated, and an email has been sent to the user with a new password": " a été réactivé, et un nouveau mot de passe a été envoyé à l'utilisateur",
     "Password reset failed": "L'opération a échoué",
-    "Name": "Nom",
-    "Active": "Actif",
     "Creator": "Créateur",
     "Show users": "Afficher les utilisateurs",
     "Users in this room": "Utilisateurs dans ce salon",
@@ -74,11 +38,25 @@
     "Room Id": "Identifiant du salon",
     "Password reset": "Mot de passe réinitialisé",
     "Activate account": "Activer le compte",
-    "Administration interface": "Interface d'administration",
-    "Password": "Mot de passe",
+    "Number of rooms": "Nombre de salons",
+    "Number of personnals conversations": "Nombre de conversations privées",
+    "Of which active rooms": "Dont salons actifs",
+    "Of which active personnals conversations": "Dont conversations privées actives",
 
     "errorBoundary": {
         "title": "Quelque chose s’est mal passé !",
         "body": "<0>Si le disfonctionnement venait à se reproduire, veuillez nous contacter à <0>{{email}}</0>.</0><1>Vous allez être redirigé vers <0>{{redirectUrl}}</0> dans quelques secondes...</1>"
-    }
+    },
+    "login": {
+        "title": "Interface d'administration",
+        "username": "Adresse électronique",
+        "password": "Mot de passe",
+        "button": "Connexion",
+        "loading": "Chargement..."
+    },
+    "save": "Enregistrer",
+    "cancel": "Annuler",
+    "close": "Fermer",
+    "success": "Opération terminée avec succès",
+    "danger": "Une erreur s'est produite"
 }
