--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,18 +1,22 @@
 {
-    "Sign in": "Sign in",
-    "Member": "Internal user",
-    "Members": "Internal users",
-    "Status": "Role",
-    "Date of creation": "Created on",
-    "Last seen": "Last active on",
-    "One to one": "One-to-one",
-
     "language": {
         "en": "English",
         "fr": "Français"
     },
+    "login": {
+        "title": "Administration interface",
+        "username": "Email address",
+        "password": "Password",
+        "button": "Sign in",
+        "loading": "Loading..."
+    },
     "errorBoundary": {
         "title": "Something went wrong!",
         "body": "<0>Should the failure happen again, please contact us at <0>{{email}}</0>.</0><1>You'll be redirected to <0>{{redirectUrl}}</0> in a few seconds...</1>"
-    }
+    },
+    "ok": "OK",
+    "save": "Save",
+    "cancel": "Cancel",
+    "success": "Successfull transaction",
+    "danger": "An error has occurred"
 }
