Watcha op284 use react table
Squashed commit of the following:

commit ff97701f694a7c344e2f65a8a474233d79fc8ee8
Merge: 17a4d80 34b6226
Author: c-cal <github-2c7c@zebrina.fr>
Date:   Sat May 16 22:39:00 2020 +0200

    Merge branch 'dev' into watcha-op284-use-react-table

commit 17a4d800555059ef6f4ee48e9200fdcade9da3dc
Author: c-cal <github-2c7c@zebrina.fr>
Date:   Tue Apr 28 13:29:27 2020 +0200

    fix: remove table outline

commit b0d29e5199498b6e55a83a1bf18cd18ac4626160
Author: c-cal <github-2c7c@zebrina.fr>
Date:   Tue Apr 28 11:50:54 2020 +0200

    fix: restore missing i18n

commit b31c26159630882b71efc215bfece324d2660e27
Author: c-cal <github-2c7c@zebrina.fr>
Date:   Tue Apr 28 10:54:56 2020 +0200

    fix: improve spinner layout

commit e1e97a0dac385d30f041c4167a6e240cfa3458b3
Author: c-cal <github-2c7c@zebrina.fr>
Date:   Tue Apr 28 10:49:53 2020 +0200

    fix: limit the scope of css classes for user account status

commit 3933e62263f553f1d658257c8a3976a448b5b994
Author: c-cal <github-2c7c@zebrina.fr>
Date:   Tue Apr 28 04:41:00 2020 +0200

    feat: add the old UserRightPanel to the new UsersTab

commit b1fd5e050f2642b7f77b345fb74075611f2d7778
Author: c-cal <github-2c7c@zebrina.fr>
Date:   Tue Apr 28 01:17:35 2020 +0200

    feat: add the old CreateUserRightPanel to the new UsersTab

commit 0446f520cb7ff1e8c6536dbbf57480b743b8e937
Author: c-cal <github-2c7c@zebrina.fr>
Date:   Mon Apr 27 23:34:26 2020 +0200

    refactor: improve i18n hierarchy

commit b5c2ce13aa48a05bcb6bfe48ed7e0971bca7dd1c
Author: c-cal <github-2c7c@zebrina.fr>
Date:   Mon Apr 27 23:22:32 2020 +0200

    feat: add new user button

commit 63a6c5ec6bbc5f76d2657032b29216a8c647bb15
Author: c-cal <github-2c7c@zebrina.fr>
Date:   Mon Apr 27 21:52:01 2020 +0200

    fix: improve layout

commit 7f818678aebac4d85f9461fbe181a0ef1fe7cf56
Author: c-cal <github-2c7c@zebrina.fr>
Date:   Mon Apr 27 19:55:49 2020 +0200

    feat: use react-table for users tab

commit c6284a3961b9e089d00b5db603eedee09e

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,18 +1,51 @@
 {
-    "Sign in": "Sign in",
-    "Member": "Internal user",
-    "Members": "Internal users",
-    "Status": "Role",
-    "Date of creation": "Created on",
-    "Last seen": "Last active on",
-    "One to one": "One-to-one",
-
     "language": {
         "en": "English",
         "fr": "Français"
     },
+    "login": {
+        "title": "Administration interface",
+        "username": "Email address",
+        "password": "Password",
+        "button": "Sign in",
+        "loading": "Loading..."
+    },
     "errorBoundary": {
         "title": "Something went wrong!",
         "body": "<0>Should the failure happen again, please contact us at <0>{{email}}</0>.</0><1>You'll be redirected to <0>{{redirectUrl}}</0> in a few seconds...</1>"
+    },
+    "dashboardTab": {
+        "title": "Dashboard"
+    },
+    "usersTab": {
+        "title": "Users",
+        "searchBox": {
+            "filter": "Filter",
+            "clear": "Clear",
+            "placeholder": "Filter users"
+        },
+        "button": "New user",
+        "headers": {
+            "displayName": "Display name",
+            "emailAddress": "Email address",
+            "lastSeen": "Last activity on",
+            "role": "Role",
+            "accountStatus": "Account status"
+        },
+        "roles": {
+            "administrator": "Administrator",
+            "collaborator": "Collaborator",
+            "partner": "Partner"
+        },
+        "isActive": {
+            "1": "enabled",
+            "0": "disabled"
+        }
+    },
+    "roomsTab": {
+        "title": "Rooms"
+    },
+    "monitoringTab": {
+        "title": "Monitoring"
     }
 }
