feat: add pendingInvitationUsers translation on dashboardTab.json.

--- a/public/locales/fr/dashboardTab.json
+++ b/public/locales/fr/dashboardTab.json
@@ -4,5 +4,6 @@
     "partners": "Partenaires",
     "loggedUsers": "Utilisateurs connectés au moins une fois",
     "monthlyUsers": "Utilisateurs connectés sur le dernier mois",
-    "weeklyUsers": "Utilisateurs connectés sur la dernière semaine"
+    "weeklyUsers": "Utilisateurs connectés sur la dernière semaine",
+    "pendingInvitationUsers": "Utilisateurs ayant une invitation en attente"
 }
