--- a/public/locales/en/dashboardTab.json
+++ b/public/locales/en/dashboardTab.json
@@ -4,5 +4,6 @@
     "partners": "Partners",
     "loggedUsers": "Users logged at least once",
     "monthlyUsers": "Users logged last month",
-    "weeklyUsers": "Users logged last week"
+    "weeklyUsers": "Users logged last week",
+    "pendingInvitationUsers": "Users with pending invitation"
 }
