feat: add admin translation on dashboardTab.json.

--- a/public/locales/en/dashboardTab.json
+++ b/public/locales/en/dashboardTab.json
@@ -2,6 +2,7 @@
     "title": "Dashboard",
     "collaborators": "Collaborators",
     "partners": "Partners",
+    "admin": "Administrators",
     "loggedUsers": "Users logged at least once",
     "monthlyUsers": "Users logged last month",
     "weeklyUsers": "Users logged last week",
