feat: add traduction of card footer.

--- a/public/locales/en/usersTab.json
+++ b/public/locales/en/usersTab.json
@@ -1,5 +1,6 @@
 {
     "title": "Users",
+    "footer": "Administrate users",
     "searchBox": {
         "filter": "Filter",
         "clear": "Clear",
