--- a/public/locales/fr/usersTab.json
+++ b/public/locales/fr/usersTab.json
@@ -1,5 +1,6 @@
 {
     "title": "Utilisateurs",
+    "footer": "Administrer les utilisateurs",
     "searchBox": {
         "filter": "Filtrer",
         "clear": "Effacer",
