feat: add noRoomsMessage on dashboard spacename.

--- a/public/locales/en/roomsTab.json
+++ b/public/locales/en/roomsTab.json
@@ -1,3 +1,4 @@
 {
-    "title": "Rooms"
+    "title": "Rooms",
+    "noRoomsMessage": "This Watcha instance does not yet have some rooms. \nReturn to Watcha to create a first room (button \"+\")."
 }
