style: deletion of useless break line on dashboard space name.

--- a/public/locales/en/roomsTab.json
+++ b/public/locales/en/roomsTab.json
@@ -1,4 +1,4 @@
 {
     "title": "Rooms",
-    "noRoomsMessage": "This Watcha instance does not yet have some rooms. \nReturn to Watcha to create a first room (button \"+\")."
+    "noRoomsMessage": "This Watcha instance does not yet have some rooms. Return to Watcha to create a first room (button \"+\")."
 }
