style: add noRoomsMessage translation to roomsPannel namespace.

--- a/public/locales/en/roomsTab.json
+++ b/public/locales/en/roomsTab.json
@@ -1,4 +1,3 @@
 {
-    "title": "Rooms",
-    "noRoomsMessage": "This Watcha instance does not yet have some rooms. Return to Watcha to create a first room (button \"+\")."
+    "title": "Rooms"
 }
