--- a/public/locales/fr/roomsTab.json
+++ b/public/locales/fr/roomsTab.json
@@ -1,4 +1,3 @@
 {
-    "title": "Salons",
-    "noRoomsMessage": "Cette installation de Watcha n'a encore aucun salon. Retournez sur Watcha  pour creer un premier Salon (bouton \"+\")"
+    "title": "Salons"
 }
