--- a/public/locales/en/dashboardTab.json
+++ b/public/locales/en/dashboardTab.json
@@ -1,3 +1,6 @@
 {
-    "title": "Dashboard"
+    "title": "Dashboard",
+    "roomsPannel": {
+        "noRoomsMessage": "This Watcha instance does not yet have some rooms. Return to Watcha to create a first room (button \"+\")."
+    }
 }
