--- a/public/locales/fr/dashboardTab.json
+++ b/public/locales/fr/dashboardTab.json
@@ -1,3 +1,6 @@
 {
-    "title": "Tableau de bord"
+    "title": "Tableau de bord",
+    "roomsPannel": {
+        "noRoomsMessage": "Cette installation de Watcha n'a encore aucun salon. Retournez sur Watcha  pour creer un premier Salon (bouton \"+\")"
+    }
 }
