style: put translation of footerLink on correct namespace.

--- a/public/locales/fr/dashboardTab.json
+++ b/public/locales/fr/dashboardTab.json
@@ -1,3 +1,9 @@
 {
-    "title": "Tableau de bord"
+    "title": "Tableau de bord",
+    "usersPannel": {
+        "footerLink": "Administrer les utilisateurs"
+    },
+    "roomsPannel": {
+        "footerLink": "Administrer les salons"
+    }
 }
