--- a/public/locales/en/dashboardTab.json
+++ b/public/locales/en/dashboardTab.json
@@ -1,3 +1,9 @@
 {
-    "title": "Dashboard"
+    "title": "Dashboard",
+    "usersPannel": {
+        "footerLink": "Administrate users"
+    },
+    "roomsPannel": {
+        "footerLink": "Administrate rooms"
+    }
 }
