fix: add coma on dashboardTab (last commit of watcha-OP-314-display-link

--- a/public/locales/en/dashboardTab.json
+++ b/public/locales/en/dashboardTab.json
@@ -4,7 +4,7 @@
         "footerLink": "Administrate users"
     },
     "roomsPannel": {
-        "footerLink": "Administrate rooms"
+        "footerLink": "Administrate rooms",
         "noRoomsMessage": "This Watcha instance does not yet have some rooms. Return to Watcha to create a first room (button \"+\")."
     }
 }
