--- a/public/locales/fr/dashboardTab.json
+++ b/public/locales/fr/dashboardTab.json
@@ -4,7 +4,7 @@
         "footerLink": "Administrer les utilisateurs"
     },
     "roomsPannel": {
-        "footerLink": "Administrer les salons"
+        "footerLink": "Administrer les salons",
         "noRoomsMessage": "Cette installation de Watcha n'a encore aucun salon. Retournez sur Watcha  pour creer un premier Salon (bouton \"+\")"
     }
 }
