--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -58,5 +58,7 @@
     "cancel": "Annuler",
     "close": "Fermer",
     "success": "Opération terminée avec succès",
-    "danger": "Une erreur s'est produite"
+    "danger": "Une erreur s'est produite",
+    "filter": "Filtrer",
+    "clear": "Effacer"
 }
