--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -18,5 +18,7 @@
     "save": "Save",
     "cancel": "Cancel",
     "success": "Successfull transaction",
-    "danger": "An error has occurred"
+    "danger": "An error has occurred",
+    "filter": "Filter",
+    "clear": "Clear"
 }
