feat: addition of translation for tooltip messages.

--- a/public/locales/en/dashboardTab.json
+++ b/public/locales/en/dashboardTab.json
@@ -12,7 +12,11 @@
         "usersPerRole": "Roles of users",
         "connectedUsers": "Connected users",
         "otherStatistics": "Other statistics",
-        "administratorsList": "List of administrators"
+        "administratorsList": "List of administrators",
+        "administratorTooltip": "Users with access to the administration console of this instance.",
+        "collaboratorTooltip": "Internal users with the right to create rooms and invite users into them.",
+        "partnerTooltip": "External users who have been invited to one or more rooms by an internal user and have limited rights.",
+        "pendingInvitationTooltip": "Users who have been invited, but have not yet set their password or logged in."
     },
     "roomsPanel": {
         "nonDirectRoomsCount": "Multiple conversations / of which active",
