--- a/public/locales/en/dashboardTab.json
+++ b/public/locales/en/dashboardTab.json
@@ -4,27 +4,26 @@
         "collaborators": "Collaborators",
         "partners": "Partners",
         "administrators": "Administrators",
-        "loggedUsers": "Users logged at least once",
-        "monthlyUsers": "Users logged last month",
-        "weeklyUsers": "Users logged last week",
+        "loggedUsers": "At least once",
+        "monthlyUsers": "During last month",
+        "weeklyUsers": "Duringlast week",
         "pendingInvitationUsers": "Pending invitations",
         "administrateButton": "Administrate users",
         "usersPerRole": "Roles of users",
         "connectedUsers": "Connected users",
         "otherStatistics": "Other statistics",
-        "administratorsList": "List of administrators",
         "administratorTooltip": "Users with access to the administration console of this instance.",
         "collaboratorTooltip": "Internal users with the right to create rooms and invite users into them.",
         "partnerTooltip": "External users who have been invited to one or more rooms by an internal user and have limited rights.",
         "pendingInvitationTooltip": "Users who have been invited, but have not yet set their password or logged in."
     },
     "roomsPanel": {
-        "nonDirectRoomsCount": "Multiple conversations / of which active",
-        "directRoomsCount": "Personnals conversations  / of which active",
+        "title": "Rooms per type",
+        "nonDirectRoomsCount": "Multiple conversations of which active",
+        "directRoomsCount": "Personnals conversations of which active",
         "administrateButton": "Administrate rooms",
         "noRoomsMessageOne": "This Watcha instance does not yet have some rooms.",
-        "noRoomsMessageTwo": "Return to Watcha to create a first room (button \"+\").",
-        "roomsPerType": "Rooms per type"
+        "noRoomsMessageTwo": "Return to Watcha to create a first room (button \"+\")."
     },
     "serverStatePannel": {
         "title": "Server state",
