--- a/public/locales/fr/dashboardTab.json
+++ b/public/locales/fr/dashboardTab.json
@@ -4,30 +4,29 @@
         "collaborators": "Collaborateurs",
         "partners": "Partenaires",
         "administrators": "Administrateurs",
-        "loggedUsers": "Utilisateurs connectés au moins une fois",
-        "monthlyUsers": "Utilisateurs connectés sur le dernier mois",
-        "weeklyUsers": "Utilisateurs connectés sur la dernière semaine",
-        "pendingInvitationUsers": "Invitations en cours",
+        "loggedUsers": "Au moins une fois",
+        "monthlyUsers": "Sur le dernier mois",
+        "weeklyUsers": "Sur la dernière semaine",
+        "pendingInvitationUsers": "Invitations en attente",
         "administrateButton": "Administrer les utilisateurs",
         "usersPerRole": "Rôles des utilisateurs",
         "connectedUsers": "Utilisateurs connectés",
         "otherStatistics": "Autres statistiques",
-        "administratorsList": "Liste des administrateurs",
         "administratorTooltip": "Utilisateurs ayant accès à la console d'administration de l'instance.",
         "collaboratorTooltip": "Utilisateurs internes ayant le droit de créer des salons et d'inviter des utilisateurs dans ces derniers.",
         "partnerTooltip": "Utilisateurs externes ayant été invités dans un ou plusieurs salons, par un utilisateur interne et ayant des droits limités.",
         "pendingInvitationTooltip": "Utilisateurs ayant été invités, mais n'ayant pas encore défini leur mot de passe, ni s'étant encore connecté."
     },
     "roomsPanel": {
-        "nonDirectRoomsCount": "Conversations a plusieurs / dont actives",
-        "directRoomsCount": "Covnersations privées / dont actives",
+        "title": "Salons par type",
+        "nonDirectRoomsCount": "Conversations a plusieurs actives",
+        "directRoomsCount": "Covnersations privées actives",
         "administrateButton": "Administrer les salons",
         "noRoomsMessageOne": "Cette installation de Watcha n'a encore aucun salon.",
-        "noRoomsMessageTwo": "Retournez sur Watcha  pour creer un premier Salon (bouton \"+\")",
-        "roomsPerType": "Salons par type"
+        "noRoomsMessageTwo": "Retournez sur Watcha  pour creer un premier Salon (bouton \"+\")"
     },
     "serverStatePannel": {
-        "title": "Etat du serveur",
+        "title": "État du serveur",
         "generaleInformation": "Informations générales",
         "version": "Version",
         "installDate": "Installé le",
