--- a/public/locales/en/usersTab.json
+++ b/public/locales/en/usersTab.json
@@ -24,6 +24,14 @@
         "role": "Role",
         "status": "Status"
     },
+    "statusHelp": {
+        "title": "Account status",
+        "content": {
+            "active": "<strong>Active</strong> : the user can use Watcha.",
+            "inactive": "<strong>Inactive</strong> : the user can no longer use Watcha.",
+            "invited": "<strong>Invitation sent</strong> : the user has not completed the registration procedure sent by email, and therefore does not have access to Watcha."
+        }
+    },
     "roles": {
         "administrator": "Administrator",
         "collaborator": "Collaborator",
