feat: wrap riot room creation modal in an iframe

--- a/public/locales/fr/roomsTab.json
+++ b/public/locales/fr/roomsTab.json
@@ -6,8 +6,7 @@
     "headers": {
         "name": "Nom",
         "creator": "Créateur",
-        "n": "Nombre de membres",
-        "type": "Type",
+        "memberCount": "Nombre de membres",
         "status": "Statut"
     },
     "status": {
