--- a/public/locales/en/roomsTab.json
+++ b/public/locales/en/roomsTab.json
@@ -6,8 +6,7 @@
     "headers": {
         "name": "Name",
         "creator": "Creator",
-        "n": "Member count",
-        "type": "Type",
+        "memberCount": "Member count",
         "status": "Status"
     },
     "status": {
